<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:context=".SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_goup"
            android:text="@string/enable_goup"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/goup_when"
            android:text="@string/goup_when"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_weight="6"
                android:textColor="@color/wrap"
                android:text="@string/maxAPIReq"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:minHeight="48dp"
                android:layout_weight="1"
                android:id="@+id/maxAPIReq"
                android:hint="@string/maxAPIReqHint"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>

    </LinearLayout>

    <Button
            android:id="@+id/confirm_setting"
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/logout"
            android:backgroundTint="#FF0000"
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>