<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <Button
     android:layout_marginTop="30dp"
     android:id="@+id/goto_download"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:text="@string/goto_download"/>


    <Button
     android:layout_marginTop="30dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/goto_read"
     android:text="@string/goto_read"/>

    <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"/>

    <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:text="@string/settings"/>


</LinearLayout>