<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchActivity"
        android:orientation="vertical">

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/check_select"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/select_url"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:text="@string/novelpia_url"
                android:minHeight="48dp"/>

        <Button
                android:id="@+id/select_this"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="#9E9E9E"
                android:text="@string/select"
        />

    </LinearLayout>

    <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>

