<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LoginActivity">

    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="노벨피아 PLUS 계정으로 로그인"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
    />

    <TextView
            android:textSize="15sp"
            android:text="! PLUS 계정이 아닐경우 PLUS 소설을 다운로드 할 수 없습니다. !"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
    />

    <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"/>

    <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:minHeight="48dp"/>
    <Button
            android:id="@+id/login_confirm"
            android:layout_marginBottom="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

</LinearLayout>