<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="25dp"
        tools:context=".ReaderActivity">

    <Button
            android:id="@+id/goup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goup"/>

    <ScrollView
            android:id="@+id/reader_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/bottom_tsugi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/go_prev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_prev"/>

            <LinearLayout
                    android:id="@+id/clickable_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:minHeight="48dp">

                <TextView
                        android:id="@+id/reader_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text=""
                />

            </LinearLayout>

            <Button
                    android:id="@+id/go_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_next"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>