<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context=".DownloadActivity">

    <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloading"
            android:textSize="20sp"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:id="@+id/progress"
                android:layout_marginTop="30dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@android:style/Widget.ProgressBar.Horizontal"/>

        <TextView
                android:id="@+id/view_nokori"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:text="0/0"
        />

    </LinearLayout>

    <Button
            android:id="@+id/tohome"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            android:text="@string/tohome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/cancel_download"
            android:layout_marginTop="30dp"
            android:visibility="visible"
            android:backgroundTint="#ff0000"
            android:text="@string/cancel_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>